# codex-manager-platform

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: account-detail.spec.ts  add-account.spec.ts  fixtures.ts  navigation.spec.ts  settings.spec.ts  tauri-mock.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: lib.rs  state.rs
src-tauri/src/codex/: cli.rs  mod.rs  process.rs  rpc.rs  switcher.rs  types.rs
src-tauri/src/commands/: accounts.rs  backup.rs  costs.rs  mod.rs  oauth.rs  oplog.rs  prompts.rs  proxy.rs  schedule.rs  sessions.rs  settings.rs  switcher.rs  threads.rs
src-tauri/src/credentials/: keyring.rs
src-tauri/src/db/: mod.rs
src-tauri/src/proxy/: mod.rs  server.rs  translate.rs  types.rs
src-tauri/zh-Hans.lproj/: InfoPlist.strings
src/components/accounts/: AddAccountDialog.tsx  EditAccountDialog.tsx
src/components/dashboard/: CliStatusBanner.tsx  DashboardView.tsx  PromptsView.tsx  ProxyView.tsx  SessionsView.tsx  SettingsView.tsx  StatsView.tsx  accountOrder.ts
src/components/layout/: AppLayout.tsx  Header.tsx
src/components/spotlight/: SpotlightPanel.tsx
src/components/ui/: Drawer.tsx  (+4 more)
src/hooks/: useDialogKeyboard.ts  useGlobalShortcut.ts
src/lib/: notifications.ts  tauri.ts  types.ts
src/stores/: accountStore.ts  themeStore.ts  toastStore.ts  uiStore.ts
src/styles/: globals.css
src/test/: helpers.ts  setup.ts
(+10 files in other folders)
