[package]
name = "codex-manager"
version = "0.1.2"
description = "Multi-account Codex coding agent manager"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
portpicker = "0.1"
keyring = "3"
rusqlite = { version = "0.35", features = ["bundled"] }
dirs = "6"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tempfile = "3"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-clipboard-manager = "2.3.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
axum = { version = "0.8", features = ["ws"] }
tokio-stream = "0.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
